<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">VibeDeck</string>
    <string name="shortcut_display_short">顯示器</string>
    <string name="shortcut_display_long">開啟 VibeDeck 顯示器</string>
    <string name="shortcut_sideboard_short">資訊板</string>
    <string name="shortcut_sideboard_long">開啟 VibeDeck 資訊板</string>
    <string name="shortcut_quota_short">額度</string>
    <string name="shortcut_quota_long">開啟 VibeDeck AI 額度</string>
</resources>
