<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_display"
        android:shortcutId="display"
        android:shortcutLongLabel="@string/shortcut_display_long"
        android:shortcutShortLabel="@string/shortcut_display_short">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="phonemonitor://open?mode=display"
            android:targetClass="com.phonemonitor.app.MainActivity"
            android:targetPackage="com.phonemonitor.app" />
    </shortcut>
    <shortcut
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_sideboard"
        android:shortcutId="sideboard"
        android:shortcutLongLabel="@string/shortcut_sideboard_long"
        android:shortcutShortLabel="@string/shortcut_sideboard_short">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="phonemonitor://open?mode=sideboard"
            android:targetClass="com.phonemonitor.app.MainActivity"
            android:targetPackage="com.phonemonitor.app" />
    </shortcut>
    <shortcut
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_quota"
        android:shortcutId="quota"
        android:shortcutLongLabel="@string/shortcut_quota_long"
        android:shortcutShortLabel="@string/shortcut_quota_short">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="phonemonitor://open?mode=quota"
            android:targetClass="com.phonemonitor.app.MainActivity"
            android:targetPackage="com.phonemonitor.app" />
    </shortcut>
</shortcuts>
